# reaper-setlist

./: .gitignore  .releaserc-local.json  .releaserc.json  .releaserc.prepare.json  CHANGELOG.md  Dockerfile  Dockerfile.debug  Dockerfile.release  Makefile  README.md  docker-compose.yaml  package.json  reaper-setlist.code-workspace  release-plz.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-approve.yml  github-release.yml  pr-title-check.yml  push.yml  reapack-release.yml  release-on-merge.yml  release-plz.yml  release.yml  semantic-release.yml
backend/: CHANGELOG.md  Cargo.toml  settings.json  songs.json
backend/.cargo/: config.toml
backend/data/: sets.json  settings.json  songs.json
backend/src/: main.rs
backend/src/controllers/: error.rs  mod.rs  project_api.rs  project_management_api.rs  reaper_project_api.rs  reaper_script_api.rs  set_api.rs  settings_api.rs  song_api.rs
backend/src/data_access/: database.rs  json_file.rs  mod.rs  reaper_client.rs  reaper_client_new.rs  reaper_client_old.rs
backend/src/models/: database.rs  mod.rs  setlist.rs  settings.rs  song.rs
backend/src/reaper_project/: mod.rs  reaper_project.rs
data/: config.json  sets.json  settings.json  songs.json
frontend/: .env.example  package.json  svelte.config.js  vite.config.ts
frontend/data/: db.sqlite
frontend/src/: hooks.server.ts
frontend/src/lib/: global.css  index.ts  util.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
lua/: .gitignore  .luacheckrc  bundle.sh  generated_rpc.lua  globals.lua  list_project_files.lua  list_projects.lua  main.lua  open_project.lua  operations.lua  operations_registry.lua  reaper-api.lua  reaper-setlist.lua
lua/operations/: get_open_tabs.lua  install.lua  list_projects.lua  open_project.lua  write_chunked_data.lua
reapack/generator/: ci-release.ts  index.ts  package.json
reapack/repo/: index.xml
rpc/: morph.ts  script-operations.ts  util.ts
rpc/input/: script-operations.ts
rpc/output/: lua-target.ts  target.ts  typescript-target.ts
src/lib/: global.css
src/routes/: +layout.svelte  +page.server.ts
temp-extract/reaper-setlist/: index.html
(+313 files in other folders)
