[package]
name = "reaper_setlist_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = "0.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls-webpki-roots",
], default-features = false }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "reaper_setlist_backend"
path = "src/main.rs"

[profile.release]
strip = true
