[package]
name = "reaper_setlist_backend"
version = "1.3.1"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/iKadmium/reaper-setlist"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = "0.10.1"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls-webpki-roots",
], default-features = false }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }

[[bin]]
name = "reaper_setlist_backend"
path = "src/main.rs"

[profile.release]
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
